Fix wrapping on APIs section

--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -338,6 +338,7 @@
 
     .container {
       @extend %grid-2;
+      flex-wrap: wrap;
       margin: auto;
       overflow: hidden;
     }
